# fast-xnor-net

./: CMakeLists.txt
src/: main.c
